--- a/sass/ui/icons.scss
+++ b/sass/ui/icons.scss
@@ -11,7 +11,6 @@ $iconPath: "../ui/icons";
 	display: inline-block;
 	height: 32px;
 	width: 32px;
-	margin-right: 1px;
 }
 
 .icon {
